--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <h2>Projects</h2>
     <ul>
       <li><strong>Learning Website</strong> – An educational platform . [<a href="https://arunima-manilal.github.io/Learning-Website/" target="_blank">Live Demo</a>]</li>
-    </ul>
+    <li><strong>Simple Calculator</strong>-A Simple calculator using html css javascript.[<a href=" https://arunima-manilal.github.io/simplecalculator/">Live Demo</a>
+</li></ul>
   </section>
 
   <section id="contact">
