--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Arunima | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -21,8 +19,9 @@
     <h2>Projects</h2>
     <ul>
       <li><strong>Learning Website</strong> – An educational platform . [<a href="https://arunima-manilal.github.io/Learning-Website/" target="_blank">Live Demo</a>]</li>
-    <li><strong>Simple Calculator</strong>-A Simple calculator using html css javascript.[<a href=" https://arunima-manilal.github.io/simplecalculator/">Live Demo</a>
-</li></ul>
+    <li><strong>Simple Calculator</strong>-A Simple calculator using html css javascript.[<a href=" https://arunima-manilal.github.io/simplecalculator/">Live Demo</a></li>li>
+      <li><strong>Guess The Number Game 
+      </strong> - A simple Binary search Game developed using Html ,CSS ,Javascript. Live Demo  <a href= "  https://arunima-manilal.github.io/Binarysearch/></a></li>
   </section>
 
   <section id="contact">
@@ -31,7 +30,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Arunima Manilal</p>
+    <p> 2025 Arunima Manilal</p>
   </footer>
 </body>
 </html>
