--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <h2>Projects</h2>
     <ul>
       <li><strong>Learning Website</strong> – An educational platform . [<a href="https://arunima-manilal.github.io/Learning-Website/" target="_blank">Live Demo</a>]</li>
-    <li><strong>Simple Calculator</strong>-A Simple calculator using html css javascript.[<a href=" https://arunima-manilal.github.io/simplecalculator/">Live Demo</a></li>li>
+    <li><strong>Simple Calculator</strong>-A Simple calculator using html css javascript.[<a href=" https://arunima-manilal.github.io/simplecalculator/">Live Demo</a>]</li>
       <li><strong>Guess The Number Game 
-      </strong> - A simple Binary search Game developed using Html ,CSS ,Javascript. Live Demo  <a href= "  https://arunima-manilal.github.io/Binarysearch/></a></li>
+      </strong> - A simple Binary search Game developed using Html ,CSS ,Javascript.[<a href= "  https://arunima-manilal.github.io/Binarysearch/>Live Demo</a>]</li>
   </section>
 
   <section id="contact">
