--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
   <header>
     <h1>Arunima Manilal</h1>
-    <p>Computer Science Student </p>
+    <p>Computer Science Engineering Student </p>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a second-year CS student passionate about web development and building innovative projects like Learning Website.</p>
+    <p>I am a second-year Btech CS student passionate about web development and building innovative projects.</p>
   </section>
 
   <section id="projects">
